--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Saira:wght@300;400;700&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  vertical-align: baseline;
+  list-style: none;
+  text-decoration: none;
+  border: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Saira', 'Roboto', sans-serif;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
